--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "node-red-contrib-bcrypt",
-  "version": "0.0.49",
-  "description": "Bcrypt.js for node-red",
+  "name": "node-red-contrib-twin-bcrypt",
+  "version": "0.0.1",
+  "description": "Twin-bcrypt.js for node-red",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Wesley Stam <wstam88@gmail.com>",
+  "author": "Rosen Velikov <rosen.velikov@evo.bg>",
   "keywords": [
     "node-red"
   ],
@@ -16,10 +16,10 @@
   "license": "ISC",
   "node-red": {
     "nodes": {
-      "bcrypt": "bcrypt/bcrypt.js"
+      "bcrypt": "twin-bcrypt/twin-bcrypt.js"
     }
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3"
+    "twin-bcrypt": "^2.2.0"
   }
 }
