--- a/package.json
+++ b/package.json
@@ -21,5 +21,6 @@
   },
   "dependencies": {
     "twin-bcrypt": "^2.2.0"
-  }
+  },
+  "publishConfig": { "registry": "https://npm.pkg.github.com/" }
 }
