--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-twin-bcrypt",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Twin-bcrypt.js for node-red",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,7 +16,7 @@
   "license": "ISC",
   "node-red": {
     "nodes": {
-      "bcrypt": "twin-bcrypt/twin-bcrypt.js"
+      "twin-bcrypt": "twin-bcrypt/twin-bcrypt.js"
     }
   },
   "dependencies": {
